force-app/main/default/src/objects/PJN_Shipment__c/PJN_Shipment__c.object-meta.xml
<CustomObject>
    <description>Shipments of products to patients as part of a care plan.</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>