force-app/main/default/src/objects/PJN_Shipment__c/fields/MVN_Next_Fill_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Next_Fill_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Fill Date</label>
    <type>Date</type>
</CustomField>