force-app/main/default/src/objects/PJN_Shipment__c/fields/MVN_Source__c.field-meta.xml
<CustomField>
    <fullName>MVN_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>