force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The patient care plan to which the shipment relates.</description>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>