force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Date_Billed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Billed__c</fullName>
    <description>DATE_BILLED, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Billed</label>
    <type>Date</type>
</CustomField>