force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Date_Filled__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Filled__c</fullName>
    <description>DATE_FILLED, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Filled</label>
    <type>Date</type>
</CustomField>