force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Date_of_Rx__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_of_Rx__c</fullName>
    <description>DATE_OF_RX, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Rx</label>
    <type>Date</type>
</CustomField>