force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Date_Shipment_Schedule_Call__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Shipment_Schedule_Call__c</fullName>
    <description>DATE_SHIPMENT_SCHEDULE_CALL, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Shipment Schedule Call</label>
    <type>Date</type>
</CustomField>