force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Date_Shipment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Shipment_Scheduled__c</fullName>
    <description>DATE_SHIPMENT_SCHEDULED, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Shipment Scheduled</label>
    <type>Date</type>
</CustomField>