force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Date_Shipped__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Shipped__c</fullName>
    <description>Date the shipment left the SP.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Shipped</label>
    <type>Date</type>
</CustomField>