force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Days_Supply_Written__c.field-meta.xml
<CustomField>
    <fullName>PJN_Days_Supply_Written__c</fullName>
    <description>DAYS_SUPPLY_WRITTEN, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Days Supply Written</label>
    <length>100</length>
    <type>Text</type>
</CustomField>