force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Dispense_As_Written__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dispense_As_Written__c</fullName>
    <description>DISPENSE_AS_WRITTEN, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispense As Written</label>
    <length>100</length>
    <type>Text</type>
</CustomField>