force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Dispense_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dispense_Status__c</fullName>
    <description>DISPENSE_STATUS, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispense Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>