force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Dispense_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dispense_Type__c</fullName>
    <description>DISPENSE_TYPE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispense Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>