force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Dispensing_Fee__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dispensing_Fee__c</fullName>
    <description>DISPENSING_FEE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispensing Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>