force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Dosage__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dosage__c</fullName>
    <description>DOSAGE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dosage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>