force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Expected_Delivery_Date__c</fullName>
    <description>EXPECTED_DELIVERY_DATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>