force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Fulfillment_Request__c.field-meta.xml
<CustomField>
    <fullName>PJN_Fulfillment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fulfillment request that the shipment completes.</description>
    <label>Fulfillment Request</label>
    <referenceTo>PJN_Fulfillment_Request__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>