force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Lot_Number__c</fullName>
    <description>LOT_NUMBER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lot Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>