force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_Order_ID__c</fullName>
    <description>ORDER_ID, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>