force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Order_Number__c</fullName>
    <description>SP&apos;s Order Number for the shipment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>