force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Part_SKU__c.field-meta.xml
<CustomField>
    <fullName>PJN_Part_SKU__c</fullName>
    <description>PART_SKU, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Part SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>