force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Part_SKU_Description__c.field-meta.xml
<CustomField>
    <fullName>PJN_Part_SKU_Description__c</fullName>
    <description>PART_SKU_DESCRIPTION, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Part SKU Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>