force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The patient to whose care plan the shipment relates.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>