force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Address_Line_2__c</fullName>
    <description>PATIENT_ADDRESS_LINE_2, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>