force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient_City__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_City__c</fullName>
    <description>PATIENT_CITY, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>