force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient_Copay_Assistance_Amount__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Copay_Assistance_Amount__c</fullName>
    <description>PATIENT_COPAY_ASSISTANCE_AMOUNT, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Copay Assistance Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>