force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Paid_Amount__c</fullName>
    <description>PATIENT_PAID_AMOUNT, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Paid Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>