force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Phone_Number__c</fullName>
    <description>PATIENT_PHONE_NUMBER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Phone Number</label>
    <type>Phone</type>
</CustomField>