force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_State__c</fullName>
    <description>PATIENT_STATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>