force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Patient_YOB__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_YOB__c</fullName>
    <description>PATIENT_YOB, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient YOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>