force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_Name__c</fullName>
    <description>PHARMACY_CORP_NAME, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>