force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Pharmacy_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_Zip_Code__c</fullName>
    <description>PHARMACY_ZIP_CODE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>