force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Physician_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Address_Line_1__c</fullName>
    <description>PHYSICIAN_ADDRESS_LINE_1, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>