force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Physician_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Last_Name__c</fullName>
    <description>PHYSICIAN_LAST_NAME, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>