force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Physician_SLN__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_SLN__c</fullName>
    <description>PHYSICIAN_STATE_LICENSE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician SLN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>