force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Physician_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_State__c</fullName>
    <description>PHYSICIAN_STATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>