force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Plan_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>PJN_Plan_Reimbursement__c</fullName>
    <description>PLAN_REIMBURSEMENT, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Reimbursement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>