force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Primary_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Group_Number__c</fullName>
    <description>PRIMARY_GROUP, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>