force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Primary_Paid__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Paid__c</fullName>
    <description>PRIMARY_PAID, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Paid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>