force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Primary_Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Payer_Name__c</fullName>
    <description>PRIMARY_PAYER_NAME, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>