force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Program_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_DeveloperName__c</fullName>
    <description>DeveloperName of the Program to which this record&apos;s parent Care Plan relates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Program DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>