force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Quantity_Dispensed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Quantity_Dispensed__c</fullName>
    <description>QUANTITY_DISPENSED, used for inbound data mapping.</description>
    <label>Quantity Dispensed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>