force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Record_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Date__c</fullName>
    <description>RECORD_DATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Date</label>
    <type>Date</type>
</CustomField>