force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Referral_Type__c</fullName>
    <description>REFERRAL_TYPE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>