force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Refills_Remaining__c.field-meta.xml
<CustomField>
    <fullName>PJN_Refills_Remaining__c</fullName>
    <description>REFILLS_REMAINING, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refills Remaining</label>
    <length>100</length>
    <type>Text</type>
</CustomField>