force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Rx_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Rx_Number__c</fullName>
    <description>RX_NUMBER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>