force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Rx_Origin_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Rx_Origin_Code__c</fullName>
    <description>RX_ORIGIN_CODE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Origin Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>