force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Secondary_BIN__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_BIN__c</fullName>
    <description>SECONDARY_BIN_NUMBER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary BIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>