force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Secondary_Deductible__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Deductible__c</fullName>
    <description>SECONDARY_DEDUCTIBLE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Deductible</label>
    <length>100</length>
    <type>Text</type>
</CustomField>