force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Secondary_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Group_Number__c</fullName>
    <description>SECONDARY_GROUP, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>