force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Secondary_Paid__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Paid__c</fullName>
    <description>SECONDARY_PAID, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Paid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>