force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Secondary_Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Payer_Type__c</fullName>
    <description>SECONDARY_PAYER_TYPE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Payer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>