force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Secondary_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Plan_Name__c</fullName>
    <description>SECONDARY_MED_INS_NAME, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>