force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Secondary_Plan_PBM__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Plan_PBM__c</fullName>
    <description>SECONDARY_PLAN_PBM, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Plan PBM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>