force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Shipment_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Shipment_Tracking_Number__c</fullName>
    <description>SHIPMENT_TRACKING_NUMBER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipment Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>