force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>PJN_Shipping_Carrier__c</fullName>
    <description>SHIPPING_CARRIER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>