force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_Shipping_State__c</fullName>
    <description>SHIPPING_STATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>