force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Shipping_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Shipping_Zip_Code__c</fullName>
    <description>SHIPPING_ZIP_CODE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>