force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_SP_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_SP_Patient_ID__c</fullName>
    <description>SP_PATIENT_ID, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SP Patient ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>