force-app/main/default/src/objects/PJN_Shipment__c/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <description>Status of the shipment.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>